framework/compiler/compiler.output
Grammar

    0 $accept: Input $end

    1 Input: /* empty */
    2      | Input Line

    3 Line: END
    4     | OrExpression END
    5     | OrExpression END_ANCHOR END

    6 Expressions: Expression
    7            | ANCHOR_SOL Expression
    8            | Expression LAZY_OP
    9            | Expression LAZY_OP LAZY_OP
   10            | Expressions Expression LAZY_OP LAZY_OP
   11            | Expressions Expression LAZY_OP
   12            | Expressions Expression

   13 Expression: AndExpression
   14           | AndExpression PLUS_OP
   15           | AndExpression STAR_OP
   16           | RangeExpression
   17           | RangeExpression PLUS_OP
   18           | RangeExpression STAR_OP
   19           | OpCpExpression
   20           | OpCpExpression PLUS_OP
   21           | OpCpExpression STAR_OP
   22           | QuantifiedExpression

   23 QuantifiedExpression: AndExpression QUANTIFIER
   24                     | OpCpExpression QUANTIFIER
   25                     | RangeExpression QUANTIFIER

   26 AndExpression: CHAR
   27              | DOT

   28 OpCpExpression: OP OrExpression CP

   29 OrExpression: Expressions
   30             | OrExpression OR_OP Expressions

   31 RangeExpression: OR Range CR
   32                | OR NOT_OP Range CR

   33 Range: CHAR RANGE_OP CHAR
   34      | Range CHAR RANGE_OP CHAR
   35      | CHAR
   36      | Range CHAR


Terminals, with rules where they appear

$end (0) 0
error (256)
CHAR (258) 26 33 34 35 36
DOT (259) 27
OR_OP (260) 30
RANGE_OP (261) 33 34
STAR_OP (262) 15 18 21
PLUS_OP (263) 14 17 20
NOT_OP (264) 32
OP (265) 28
CP (266) 28
QUANTIFIER (267) 23 24 25
OR (268) 31 32
CR (269) 31 32
LAZY_OP (270) 8 9 10 11
ANCHOR_SOL (271) 7
END (272) 3 4 5
END_ANCHOR (273) 5


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
Input (20)
    on left: 1 2, on right: 0 2
Line (21)
    on left: 3 4 5, on right: 2
Expressions (22)
    on left: 6 7 8 9 10 11 12, on right: 10 11 12 29 30
Expression (23)
    on left: 13 14 15 16 17 18 19 20 21 22, on right: 6 7 8 9 10 11
    12
QuantifiedExpression (24)
    on left: 23 24 25, on right: 22
AndExpression (25)
    on left: 26 27, on right: 13 14 15 23
OpCpExpression (26)
    on left: 28, on right: 19 20 21 24
OrExpression (27)
    on left: 29 30, on right: 4 5 28 30
RangeExpression (28)
    on left: 31 32, on right: 16 17 18 25
Range (29)
    on left: 33 34 35 36, on right: 31 32 34 36


state 0

    0 $accept: . Input $end

    $default  reduce using rule 1 (Input)

    Input  go to state 1


state 1

    0 $accept: Input . $end
    2 Input: Input . Line

    $end        shift, and go to state 2
    CHAR        shift, and go to state 3
    DOT         shift, and go to state 4
    OP          shift, and go to state 5
    OR          shift, and go to state 6
    ANCHOR_SOL  shift, and go to state 7
    END         shift, and go to state 8

    Line                  go to state 9
    Expressions           go to state 10
    Expression            go to state 11
    QuantifiedExpression  go to state 12
    AndExpression         go to state 13
    OpCpExpression        go to state 14
    OrExpression          go to state 15
    RangeExpression       go to state 16


state 2

    0 $accept: Input $end .

    $default  accept


state 3

   26 AndExpression: CHAR .

    $default  reduce using rule 26 (AndExpression)


state 4

   27 AndExpression: DOT .

    $default  reduce using rule 27 (AndExpression)


state 5

   28 OpCpExpression: OP . OrExpression CP

    CHAR        shift, and go to state 3
    DOT         shift, and go to state 4
    OP          shift, and go to state 5
    OR          shift, and go to state 6
    ANCHOR_SOL  shift, and go to state 7

    Expressions           go to state 10
    Expression            go to state 11
    QuantifiedExpression  go to state 12
    AndExpression         go to state 13
    OpCpExpression        go to state 14
    OrExpression          go to state 17
    RangeExpression       go to state 16


state 6

   31 RangeExpression: OR . Range CR
   32                | OR . NOT_OP Range CR

    CHAR    shift, and go to state 18
    NOT_OP  shift, and go to state 19

    Range  go to state 20


state 7

    7 Expressions: ANCHOR_SOL . Expression

    CHAR  shift, and go to state 3
    DOT   shift, and go to state 4
    OP    shift, and go to state 5
    OR    shift, and go to state 6

    Expression            go to state 21
    QuantifiedExpression  go to state 12
    AndExpression         go to state 13
    OpCpExpression        go to state 14
    RangeExpression       go to state 16


state 8

    3 Line: END .

    $default  reduce using rule 3 (Line)


state 9

    2 Input: Input Line .

    $default  reduce using rule 2 (Input)


state 10

   10 Expressions: Expressions . Expression LAZY_OP LAZY_OP
   11            | Expressions . Expression LAZY_OP
   12            | Expressions . Expression
   29 OrExpression: Expressions .

    CHAR  shift, and go to state 3
    DOT   shift, and go to state 4
    OP    shift, and go to state 5
    OR    shift, and go to state 6

    $default  reduce using rule 29 (OrExpression)

    Expression            go to state 22
    QuantifiedExpression  go to state 12
    AndExpression         go to state 13
    OpCpExpression        go to state 14
    RangeExpression       go to state 16


state 11

    6 Expressions: Expression .
    8            | Expression . LAZY_OP
    9            | Expression . LAZY_OP LAZY_OP

    LAZY_OP  shift, and go to state 23

    $default  reduce using rule 6 (Expressions)


state 12

   22 Expression: QuantifiedExpression .

    $default  reduce using rule 22 (Expression)


state 13

   13 Expression: AndExpression .
   14           | AndExpression . PLUS_OP
   15           | AndExpression . STAR_OP
   23 QuantifiedExpression: AndExpression . QUANTIFIER

    STAR_OP     shift, and go to state 24
    PLUS_OP     shift, and go to state 25
    QUANTIFIER  shift, and go to state 26

    $default  reduce using rule 13 (Expression)


state 14

   19 Expression: OpCpExpression .
   20           | OpCpExpression . PLUS_OP
   21           | OpCpExpression . STAR_OP
   24 QuantifiedExpression: OpCpExpression . QUANTIFIER

    STAR_OP     shift, and go to state 27
    PLUS_OP     shift, and go to state 28
    QUANTIFIER  shift, and go to state 29

    $default  reduce using rule 19 (Expression)


state 15

    4 Line: OrExpression . END
    5     | OrExpression . END_ANCHOR END
   30 OrExpression: OrExpression . OR_OP Expressions

    OR_OP       shift, and go to state 30
    END         shift, and go to state 31
    END_ANCHOR  shift, and go to state 32


state 16

   16 Expression: RangeExpression .
   17           | RangeExpression . PLUS_OP
   18           | RangeExpression . STAR_OP
   25 QuantifiedExpression: RangeExpression . QUANTIFIER

    STAR_OP     shift, and go to state 33
    PLUS_OP     shift, and go to state 34
    QUANTIFIER  shift, and go to state 35

    $default  reduce using rule 16 (Expression)


state 17

   28 OpCpExpression: OP OrExpression . CP
   30 OrExpression: OrExpression . OR_OP Expressions

    OR_OP  shift, and go to state 30
    CP     shift, and go to state 36


state 18

   33 Range: CHAR . RANGE_OP CHAR
   35      | CHAR .

    RANGE_OP  shift, and go to state 37

    $default  reduce using rule 35 (Range)


state 19

   32 RangeExpression: OR NOT_OP . Range CR

    CHAR  shift, and go to state 18

    Range  go to state 38


state 20

   31 RangeExpression: OR Range . CR
   34 Range: Range . CHAR RANGE_OP CHAR
   36      | Range . CHAR

    CHAR  shift, and go to state 39
    CR    shift, and go to state 40


state 21

    7 Expressions: ANCHOR_SOL Expression .

    $default  reduce using rule 7 (Expressions)


state 22

   10 Expressions: Expressions Expression . LAZY_OP LAZY_OP
   11            | Expressions Expression . LAZY_OP
   12            | Expressions Expression .

    LAZY_OP  shift, and go to state 41

    $default  reduce using rule 12 (Expressions)


state 23

    8 Expressions: Expression LAZY_OP .
    9            | Expression LAZY_OP . LAZY_OP

    LAZY_OP  shift, and go to state 42

    $default  reduce using rule 8 (Expressions)


state 24

   15 Expression: AndExpression STAR_OP .

    $default  reduce using rule 15 (Expression)


state 25

   14 Expression: AndExpression PLUS_OP .

    $default  reduce using rule 14 (Expression)


state 26

   23 QuantifiedExpression: AndExpression QUANTIFIER .

    $default  reduce using rule 23 (QuantifiedExpression)


state 27

   21 Expression: OpCpExpression STAR_OP .

    $default  reduce using rule 21 (Expression)


state 28

   20 Expression: OpCpExpression PLUS_OP .

    $default  reduce using rule 20 (Expression)


state 29

   24 QuantifiedExpression: OpCpExpression QUANTIFIER .

    $default  reduce using rule 24 (QuantifiedExpression)


state 30

   30 OrExpression: OrExpression OR_OP . Expressions

    CHAR        shift, and go to state 3
    DOT         shift, and go to state 4
    OP          shift, and go to state 5
    OR          shift, and go to state 6
    ANCHOR_SOL  shift, and go to state 7

    Expressions           go to state 43
    Expression            go to state 11
    QuantifiedExpression  go to state 12
    AndExpression         go to state 13
    OpCpExpression        go to state 14
    RangeExpression       go to state 16


state 31

    4 Line: OrExpression END .

    $default  reduce using rule 4 (Line)


state 32

    5 Line: OrExpression END_ANCHOR . END

    END  shift, and go to state 44


state 33

   18 Expression: RangeExpression STAR_OP .

    $default  reduce using rule 18 (Expression)


state 34

   17 Expression: RangeExpression PLUS_OP .

    $default  reduce using rule 17 (Expression)


state 35

   25 QuantifiedExpression: RangeExpression QUANTIFIER .

    $default  reduce using rule 25 (QuantifiedExpression)


state 36

   28 OpCpExpression: OP OrExpression CP .

    $default  reduce using rule 28 (OpCpExpression)


state 37

   33 Range: CHAR RANGE_OP . CHAR

    CHAR  shift, and go to state 45


state 38

   32 RangeExpression: OR NOT_OP Range . CR
   34 Range: Range . CHAR RANGE_OP CHAR
   36      | Range . CHAR

    CHAR  shift, and go to state 39
    CR    shift, and go to state 46


state 39

   34 Range: Range CHAR . RANGE_OP CHAR
   36      | Range CHAR .

    RANGE_OP  shift, and go to state 47

    $default  reduce using rule 36 (Range)


state 40

   31 RangeExpression: OR Range CR .

    $default  reduce using rule 31 (RangeExpression)


state 41

   10 Expressions: Expressions Expression LAZY_OP . LAZY_OP
   11            | Expressions Expression LAZY_OP .

    LAZY_OP  shift, and go to state 48

    $default  reduce using rule 11 (Expressions)


state 42

    9 Expressions: Expression LAZY_OP LAZY_OP .

    $default  reduce using rule 9 (Expressions)


state 43

   10 Expressions: Expressions . Expression LAZY_OP LAZY_OP
   11            | Expressions . Expression LAZY_OP
   12            | Expressions . Expression
   30 OrExpression: OrExpression OR_OP Expressions .

    CHAR  shift, and go to state 3
    DOT   shift, and go to state 4
    OP    shift, and go to state 5
    OR    shift, and go to state 6

    $default  reduce using rule 30 (OrExpression)

    Expression            go to state 22
    QuantifiedExpression  go to state 12
    AndExpression         go to state 13
    OpCpExpression        go to state 14
    RangeExpression       go to state 16


state 44

    5 Line: OrExpression END_ANCHOR END .

    $default  reduce using rule 5 (Line)


state 45

   33 Range: CHAR RANGE_OP CHAR .

    $default  reduce using rule 33 (Range)


state 46

   32 RangeExpression: OR NOT_OP Range CR .

    $default  reduce using rule 32 (RangeExpression)


state 47

   34 Range: Range CHAR RANGE_OP . CHAR

    CHAR  shift, and go to state 49


state 48

   10 Expressions: Expressions Expression LAZY_OP LAZY_OP .

    $default  reduce using rule 10 (Expressions)


state 49

   34 Range: Range CHAR RANGE_OP CHAR .

    $default  reduce using rule 34 (Range)
